Updated syllabus for 2023

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -68,7 +68,7 @@ morekeywords={__global__, __device__},  % CUDA specific keywords
 {\Large \textsc{MGMT 737: Applied Empirical Methods}}
 \end{center}
 \begin{center}
-Spring 2022
+Spring 2023
 \end{center}
 %\date{September 26, 2014}
 
@@ -99,7 +99,9 @@ Spring 2022
 graduate students interested in econometric methods used in empirical
 research. The goal of this class is to provide an overview of
 different empirical methods, with an emphasis on practical
-implementation.  I will provide a set of lecture slides. There are additional background papers that are optional, but are important if you want concrete details on the results.
+implementation.  I will provide a set of lecture slides. There are
+additional background papers that are optional, but are important if
+you want concrete details on the results.
 
 More generally, this is a course where I focus on providing my
 understanding and intuition of empirical methods, as they are used by
@@ -127,7 +129,7 @@ artisanship. By the end of the term, my hope is for three things:
 \end{enumerate}
 
 \noindent\textbf{Assignments:}
-There will be problem sets every week. These will involve both
+There will be problem sets most weeks. These will involve both
 theoretical calculations and computer exercises in which you will be
 asked to analyze data sets. You can use any computer package you wish
 to use. Solutions will be handed out written in R. Since there will be
@@ -151,7 +153,8 @@ attempt to maintain good coding practices while doing so -- this will
 likely be challenging for those of you who are inexperienced at
 programming, so please plan accordingly -- I will not be providing
 additional instruction on coding beyond what I cover in class.  See
-the following resources in R for guidance (Many thanks to Max Kasy for organizing these materials):
+the following resources in R for guidance (Many thanks to Max Kasy for
+organizing these materials):
 
 \begin{itemize}
 \item Introduction to Base R: \url{https://cran.r-project.org/doc/manuals/r-release/R-intro.pdf}
@@ -164,6 +167,7 @@ the following resources in R for guidance (Many thanks to Max Kasy for organizin
 This is a partial list of various interesting and useful books that will be touched during the course. 
 \begin{itemize}
 \item Joshua Angrist and J\"orn-Steffen Pischke, {\textit{Mostly Harmless Econometrics}}
+\item Bruce Hansen, {\textit{Econometrics}}
 \item Peter M. Aronow and Benjamin T. Miller, {\textit{Foundations of Agnostic Statistics}}
 \item Imbens and Rubin, {\textit{Causal Inference for Statistics, Social, and Biomedical Sciences}}
 \item Kieran Healy, {\textit{Data Visualization: A Practical Introduction}}, \url{https://socviz.co/}
@@ -276,6 +280,9 @@ ECON 550, ECON 551
     \item ``Maximum score estimation of the stochastic utility model of choice'', Manski (1975)
     \item ``Analysis of covariance with qualitative data'' Chamberlain (1980)
     \item ``Binary Response Models for Panel Data: Identification and Information'' Chamberlain (2010)
+    \item ``Best practices for differentiated products demand estimation with pyblp'' Conlon and Gortmaker (2020)
+    \item ``Bayesian analysis of random coefficient models using aggregate data'' Jiang, Manchanda, and Rossi (2009)
+    \item ``Improving the Numerical Performance of Static and Dynamic Aggregate Discrete Choice Random Coefficients Demand Estimation'' Dub\'e, Fox, and Su (2012)
     \end{itemize}
   \item Class 11: Duration models
     \begin{itemize}
@@ -304,6 +311,7 @@ ECON 550, ECON 551
     \item ``On the Use of Two-Way Fixed Effects Regression Models for Causal Inference with Panel Data'', Imai and Kim (2020)
     \item ``Fuzzy differences-in-differences'' de Chaisemartin and d'Haultfoeuille (2018)
     \item ``Semiparametric difference-in-differences estimators'' Abadie (2005)
+    \item ``How Much Should We Trust Staggered Difference-In-Differences Estimates?'' Baker, Larcker and Wang (2021)
     \end{itemize}
   \item Class 14: Difference-in-differences (Part II): Event Studies, Synthetic Control + Synthetic DinD
     \begin{itemize}
@@ -313,9 +321,11 @@ ECON 550, ECON 551
     \end{itemize}
   \item Class 15: Difference-in-differences (Part III): The Checklist and Extensions
     \begin{itemize}
-    \item ``Using synthetic controls: Feasibility, data requirements, and methodological aspects'' Abadie (2019)
-    \item ``Synthetic control methods for comparative case studies: Estimating the effect of California’s tobacco control program'' Abadie, Diamond and Hainmueller (2010)
-    \item ``Synthetic Difference In Differences'', Arkhangelsky et al. (2019)
+    \item ``What’s Trending in Difference-in-Differences? A Synthesis of the Recent Econometrics Literature'' Roth, Sant’Anna,  Bilinski, and Poe (2022)
+    \item ``Efficient Estimation for Staggered Rollout Designs'' Roth and Sant'Anna (2022)
+    \item ``A More Credible Approach to Parallel Trends'' Roth and Rambachan (2022)
+    \item ``When Is Parallel Trends Sensitive to Functional Form?'' Roth and Sant'Anna (2022)
+    \item ``Difference-in-Differences with a Continuous Treatment'' Callaway, Goodman-Bacon and Sant'Anna (2021)
     \end{itemize}
   \item Class 16: Instrumental Variables (Part I)
     \begin{itemize}
@@ -359,6 +369,7 @@ ECON 550, ECON 551
     \item ``Efficient Estimation with Non-Random Exposure to Exogeneous Shocks'' Borusyak and Hull (2022)
     \item ``The Estimation of Treatment Effects in Simulated Instrument Designs'', Aronow, Goldsmith-Pinkham and Sorkin (mimeo)
     \item ``Granular Instrumental Variables'', Gabaix and Koijen (2022)
+    \item ``Included and Excluded Instruments in Structural Estimation,'' Andrews, Barahona, Gentzkow, Rambachan, and Shapiro (2022)
     \end{itemize}
   \item Class 20: Examiners, Leniency, and Hausman Instruments
     \begin{itemize}
