Updated links in Readme and fixed intro slides

--- a/lectures/00_intro.tex
+++ b/lectures/00_intro.tex
@@ -204,9 +204,9 @@
 % INTRO
 \begin{frame}{Requirements }
 \begin{columns}[T] % align columns
-\begin{column}{.7\textwidth}
+\begin{column}{.9\textwidth}
   \begin{wideitemize}
-  \item There are no exams, I will be assigning problem sets on a (hopefully) weekly basis.
+  \item There are no exams, I will be assigning problem sets on a (quasi) weekly basis.
   \item You can use any computer package you wish to use. Solutions will be handed out written in R. 
     \begin{itemize}
     \item See syllabus for details
@@ -216,8 +216,9 @@
   \item I also highly recommend the following texts:
     \begin{itemize}
     \item Angrist and  Pischke, Mostly Harmless Econometrics
-    \item  Miller and Aronow, Foundations of Agnostic Statistics
-    \item  Cunningham, Causal Inference: The Mixtape, https://mixtape.scunning.com/
+    \item Hansen, Econometrics
+    \item Miller and Aronow, Foundations of Agnostic Statistics
+    \item Cunningham, Causal Inference: The Mixtape, https://mixtape.scunning.com/
     \item Imbens and Rubin, Causal Inference for Statistics, Social, and Biomedical Sciences      
     \end{itemize}
   \end{wideitemize}
@@ -239,10 +240,6 @@
 \begin{columns}[T] % align columns
 \begin{column}{.7\textwidth}
   \begin{wideitemize}
-  \item This is my second time teaching this course
-    \begin{itemize}
-    \item There will be growing pains!
-    \end{itemize}
   \item In the end, this is a graduate course targetted at making you a good empirical researcher
   \item My goal is to exposed to a wide range of empirical methods,
     and understand how they connect.
@@ -252,7 +249,7 @@
     \end{itemize}
   \item I will also emphasize how to communicate the econometrics underlying your research ideas
     \begin{itemize}
-    \item This inclues good graphic design!
+    \item This includes good graphic design!
     \end{itemize}
   \end{wideitemize}
 \end{column}%
