--- a/lectures/03_propensity_scores.tex
+++ b/lectures/03_propensity_scores.tex
@@ -372,7 +372,7 @@
   \item In most non-experimental settings, the p-score is unknown and must be estimated
   \item When estimating, we have two cases:
     \begin{itemize}
-    \item If $X$ is discrete, we know that $\hat{pi}(X)$ can be an exact approximation (why?)
+    \item If $X$ is discrete, we know that $\hat{\pi}(X)$ can be an exact approximation (why?)
     \item If $X$ is \emph{not} discrete (or high-dimensional), how should we approximate it?
     \end{itemize}
   \item We need to estimate $\pi(X)$ in a way that is flexible and
