--- a/lectures/05_regression_1.tex
+++ b/lectures/05_regression_1.tex
@@ -325,7 +325,7 @@
       \end{itemize}
     \item The Behrens-Fisher problem -- imagine that $n_{0} >> n_{1}$. (E.g. many untreated, a few treated).
       \begin{itemize}
-      \item Then, the distribution is really dirven by $\sigma^{2}(1)/n_{1}$, and $n_{1}$ is the correct degrees of freedom.
+      \item Then, the distribution is really driven by $\sigma^{2}(1)/n_{1}$, and $n_{1}$ is the correct degrees of freedom.
       \item This makes a big difference! Contrast $t^{3}_{0.975} = 3.182$  vs. $t^{28}_{0.975}=2.048$
       \end{itemize}
   \end{wideitemize}
@@ -392,7 +392,7 @@
   \item How should we be thinking about inference anyway? What's the error in $\epsilon$ mean anyway?
   \item The thought experiment typically comes from a sampling
     perspective -- we consider that this is a small sample from a
-    broader population, and uncertainty comes from whether the estimates reflect the true underlyign population
+    broader population, and uncertainty comes from whether the estimates reflect the true underlying population
     \begin{itemize}
     \item Note that this contrasts with our design-based thought experiment!
     \end{itemize}
