Update Slides on GPHK

--- a/lectures/05_regression_1.tex
+++ b/lectures/05_regression_1.tex
@@ -673,7 +673,7 @@
     colonial boundaries
     \begin{itemize}
     \item Claim in Kelly (2019) is that t-statistics in these types of regressions are grossly amplified by spatial correlation
-    \item Fixable with Conley standard errors
+    \item Fixable with Conley standard errors?
     \item This is a huge deal for a lot of literatures (economic
       history especially) -- matters for corporate governance
       literature too (LLSV)
