--- a/syllabus.tex
+++ b/syllabus.tex
@@ -225,6 +225,7 @@ ECON 550, ECON 551
     \item ``Exact p-Values for Network Interference'', Athey, Eckles and Imbens (2018)
     \item ``Estimating peer effects in networks with peer encouragement designs'' Eckles, Kizilcec and Bakshy (2016)
     \item ``Causal Inference under Temporal and Spatial Interference.'' Wang (2020) \url{https://www.yewang-polisci.com/publications}
+    \item ``How to Use Natural Experiments to Measure Misallocation'' Sraer and Thesmar (2022) 
     \end{itemize}
   \end{enumerate}
 \item \underline{Linear Regression}
@@ -235,6 +236,8 @@ ECON 550, ECON 551
     \item ``GMM estimation with cross sectional dependence'' Conley (1999)
     \item ``The Standard Errors of Persistence'' Kelly (2019)
     \item ``Clustering, spatial correlations, and randomization inference.'' Barrios et al. (2012)
+    \item ``Robust Inference with multiway clustering'' Cameron et al. (2011)
+    \item ``Estimating standard errors in finance panel data sets: Comparing approaches'' Petersen (2009)
     \item  ``Sampling-based vs. Design-based Uncertainty in Regression Analysis.'' Abadie et al. (2019)
     \item  ``When Should You Adjust Standard Errors for Clustering?'' Abadie et al. (2022)
     \item  ``Using Wasserstein Generative Adversarial Networks for the Design of Monte Carlo Simulations'' Athey et al.
@@ -267,6 +270,7 @@ ECON 550, ECON 551
     \item ``Inference on treatment effects after selection among high-dimensional controls'' Belloni, Chernozhukov  and Hansen (2014)
     \item ``On model selection consistency of Lasso'' Zhao and Yu (2006)
     \item  ``Omitted variable bias of Lasso-based inference methods: A finite sample analysis'' Wuthrich and Zhu (2020)
+    \item ``Taming the factor zoo: A test of new factors'' Feng, Giglio, and Xiu (2020)
     \end{itemize}
   \end{enumerate}
 \item \underline{Likelihood Methods}
@@ -274,15 +278,16 @@ ECON 550, ECON 551
   \item Class 9: Binary Discrete Choice, GLM and Computational Methods
     \begin{itemize}
     \item ``Discrete Choice Methods with Simulation'' Train (2009) \url{https://eml.berkeley.edu/books/choice2.html}
+    \item ``Analysis of covariance with qualitative data'' Chamberlain (1980)
+    \item ``Binary Response Models for Panel Data: Identification and Information'' Chamberlain (2010)
+    \item ``Count (and count-like) data in finance'' Cohn, Liu and Wardlaw (2022)
     \end{itemize}
   \item Class 10: Multiple Discrete Choices
     \begin{itemize}
-    \item ``Maximum score estimation of the stochastic utility model of choice'', Manski (1975)
-    \item ``Analysis of covariance with qualitative data'' Chamberlain (1980)
-    \item ``Binary Response Models for Panel Data: Identification and Information'' Chamberlain (2010)
     \item ``Best practices for differentiated products demand estimation with pyblp'' Conlon and Gortmaker (2020)
     \item ``Bayesian analysis of random coefficient models using aggregate data'' Jiang, Manchanda, and Rossi (2009)
     \item ``Improving the Numerical Performance of Static and Dynamic Aggregate Discrete Choice Random Coefficients Demand Estimation'' Dub\'e, Fox, and Su (2012)
+    \item ``A demand system approach to asset pricing'' Koijen and Yogo (2019)      
     \end{itemize}
   \item Class 11: Duration models
     \begin{itemize}
@@ -297,6 +302,7 @@ ECON 550, ECON 551
     \item ``The Impacts of Neighborhoods on Intergenerational Mobility II: County-Level Estimates'' Chetty and Hendren (2018)
     \item ``Understanding the average impact of microcredit expansions: A bayesian hierarchical analysis of seven randomized experiments'' Meager (2019)
     \item ``Investing for the Long Run when Returns Are Predictable.'' Barberis (2000)
+    \item ``Is there a replication crisis in finance?'' Jensen, Kelly and Pedersen (2021)
     \end{itemize}
   \end{enumerate}
 \item  \underline{Canonical Research Designs}
@@ -335,6 +341,8 @@ ECON 550, ECON 551
     \item ``Instrumental Variables: A Study of Implicit Behavioral Assumptions Used in Making Program Evaluations'' Heckman (1997)
     \item ``Comment on James J. Heckman,`Instrumental Variables: A Study of Implicit Behavioral Assumptions Used in Making Program Evaluations''' Angrist and Imbens (1999)
     \item ``Instrumental variables: response to Angrist and Imbens'' Heckman (1999)
+    \item ``What Explains the 2007–2009 Drop in Employment?'' Mian and Sufi (2014)
+    \item ``Broken Instruemnts'' Gallen (2022)
     \end{itemize}
   \item Class 17: Instrumental Variables (Part II)
     \begin{itemize}
@@ -344,9 +352,7 @@ ECON 550, ECON 551
     \item ``Random effects estimators with many instrumental variables'' Chamberlain and Imbens (2004)
     \item ``Tolerating defiance? Local average treatment effects without monotonicity'' de Chaisemartin
     \item ``Weak Instruments in Instrumental Variables Regression: Theory and Practice'', Andrews, Stock and Sun (2018)
-    \item ``Local instrumental variables and latent variable models
-      for identifying and bounding treatment effects'' Heckman and
-      Vytlacil (1999)
+    \item ``Local instrumental variables and latent variable models for identifying and bounding treatment effects'' Heckman and Vytlacil (1999)
     \end{itemize}
   \item Class 18: Instrumental Variables (Part III)
     \begin{itemize}
@@ -374,6 +380,7 @@ ECON 550, ECON 551
   \item Class 20: Examiners, Leniency, and Hausman Instruments
     \begin{itemize}
     \item ``Consumer bankruptcy and financial health'' Dobbie, Goldsmith-Pinkham and Yang (2016)
+    \item ``How Do Consumers Fare When Dealing with Debt Collectors? Evidence from Out-of-Court Settlements'' Cheng, Severino and Townsend (2020)
     \item ``The criminal and labor market impacts of incarceration.'' Mueller-Smith (2015)
     \item ``Judging Judge Fixed Effects'' Frandsen, Lefgren and Leslie (2020)
     \item ``Racial bias in bail decisions'' Arnold, Dobbie, and Yang (2018)
@@ -389,6 +396,8 @@ ECON 550, ECON 551
     \item ``Inference on causal effects in a generalized regression kink design'' Card et al. (2015)
     \item ``Robust nonparametric confidence intervals for regression-discontinuity designs'' Calanico et al. (2014)
     \item ``Regression discontinuity designs using covariates'' Calanico et al (2019)
+    \item  ``Investment and financing constraints: Evidence from the funding of corporate pension plans'' Rauh (2006)
+    \item ``Threshold Events and Identification: A Study of Cash Shortfalls'' Bakke and WHited (2012)
     \end{itemize}
   \item Class 22: Regression Discontinuity II: The Checklist
   \item Class 23: Regression Discontinuity III: Extensions
