Update syllabus and duration

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -296,6 +296,9 @@ ECON 550, ECON 551
     \item ``Duration Dependence and Labor Market Conditions: Evidence from a Field Experiment'', Kroft, Lange and Notowidigdo (2013)
     \item ``Economic duration data and hazard functions'', Kiefer (1988)
     \item ``Duration Models: Specification, Identification and Multiple Durations'', Van Den Berg (2001)
+    \item ``Autoregressive Conditional Duration: A New Model for Irregularly Spaced Transaction Data'', Engle and Russell (1998)
+    \item ``A nonlinear autoregressive conditional duration model with applications to financial transaction data'', Zhang, Russell and Tsay (2001)
+    \item ``The Econometrics of Financial Duration Modeling'', Cavaliere et al. (2022)
     \end{itemize}
   \item Class 12: Hierarchical modeling + Bayesian Shrinkage
     \begin{itemize}
